Show all notifications that are stored in the database

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <nav _ngcontent-c1="" class="docs-navbar-header">
 
     <a _ngcontent-c1="" class="docs-navbar-hide-small docs-button mat-button ng-star-inserted" mat-button="" tabindex="0" aria-disabled="false" [routerLink]="['/home']">
-      <span class="mat-button-wrapper">Home</span>
+      <span class="mat-button-wrapper">New</span>
       <div class="mat-button-ripple mat-ripple" matripple=""></div>
       <div class="mat-button-focus-overlay"></div>
     </a>
