--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -6,6 +6,7 @@
      fxLayoutAlign="center"
      fxLayoutGap="10px"
      fxLayoutGap.xs="0">
+
   <div class="item item-1" fxFlex="20%">
     <button mat-raised-button color="primary" (click)="getNotificationPermission()">Get notification permission</button>
     <button mat-raised-button color="primary" (click)="setTestNotification()">Test notification (should show after 10seconds)</button>
@@ -13,7 +14,7 @@
 
   <div class="item item-2" fxFlex="40%">
 
-    <div class="example-container">
+    <div class="form-container">
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Title" [(ngModel)]="title">
       </mat-form-field>
@@ -22,15 +23,14 @@
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Trigger time" [owlDateTimeTrigger]="dt" [owlDateTime]="dt" [(ngModel)]="delay" readonly>
+        <input matInput placeholder="Trigger time" [owlDateTimeTrigger]="dt" [owlDateTime]="dt" [(ngModel)]="notificationTime" readonly>
         <owl-date-time #dt></owl-date-time>
       </mat-form-field>
 
     </div>
     <button mat-raised-button color="primary" (click)="setNotification()">Set a notification</button>
-
   </div>
-  <div class="item item-3" fxFlex>Item 3</div>
+
 </div>
 
 
