--- a/src/components/home/home.component.scss
+++ b/src/components/home/home.component.scss
@@ -1,9 +1,4 @@
-.example-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.example-container > * {
+.form-container > * {
   width: 100%;
 }
 
